<resources>
    <string name="app_name">Tattoo</string>

    <!--login activity-->
    <string name="txt_password">PASSWORD</string>
    <string name="txt_user">USERNAME</string>
    <string name="sign_in_text">Next</string>
    <string name="version_text">Phiên bản 0.0.2</string>
    <string name="register_text">Register account</string>

    <!--Search activity-->
    <string name="txt_phone_email">PHONE/EMAIL</string>
    <string name="txt_name_client_id">NAME/CLIENT\'S ID</string>

    <!--dialog remove-->
    <string name="title_history">Lịch sử dịch vụ</string>
    <string name="title_remove_dialog">Bạn muốn xoá dịch vụ ?</string>
    <string name="btn_cancel">Huỷ</string>
    <string name="btn_confirm">Xác nhận</string>

    <!--Add activity-->
    <string name="txt_name">TATTOOIST</string>
    <string name="txt_price">ĐƠN GIÁ</string>
    <string name="txt_preferential">ƯU ĐÃI</string>
    <string name="txt_deposit">Đã cọc</string>
    <string name="txt_payment">Đã thanh toán</string>
    <string name="txt_balance">Còn lại</string>
    <string name="txt_note">Ghi chú</string>

    <!--Edit activity-->
    <string name="txt_update">Cập nhật</string>
    <string name="txt_name_update">Nhân viên thực hiện</string>
    <string name="btn_save">Lưu</string>

    <!--Rating activity-->
    <string name="txt_rating">Rating</string>
    <string name="txt_rating_question">BẠN CHƯA HÀI LÒNG VỀ ĐIỀU GÌ ?</string>
    <string name="txt_attitude">Thái độ nhân viên</string>
    <string name="txt_toilet">Vệ sinh</string>
    <string name="txt_quality">Chất lượng hình săm</string>
    <string name="txt_comment">Viết nhận xét</string>
    <string name="btn_finish">Hoàn tất</string>

    <!--Dialog notification success-->
    <string name="txt_notificate">Chúc mừng bạn đã TÁI CHẾ</string>
    <string name="txt_success">thành công</string>

    <!--Register activity-->
    <string name="txt_title_register">CUSTOMER INFORMATION</string>
    <string name="txt_name_register">NAME</string>
    <string name="txt_birthday">BIRTHDAY</string>
    <string name="txt_gender">GENDER</string>
    <string name="txt_phone">PHONE</string>
    <string name="txt_email">EMAIL</string>

</resources>
