<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_image"
    tools:context=".ui.activity.RatingActivity">

    <TextView
        android:id="@+id/textView3"
        style="@style/TxtRatingTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:text="@string/txt_rating"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:weightSum="5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.04000002">

        <ImageView
            android:id="@+id/img_star_1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
             />

        <ImageView
            android:id="@+id/img_star_2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
             />

        <ImageView
            android:id="@+id/img_star_3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
             />

        <ImageView
            android:id="@+id/img_star_4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
             />

        <ImageView
            android:id="@+id/img_star_5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
             />

    </LinearLayout>

    <TextView
        android:id="@+id/textView4"
        style="@style/TxtRatingQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="508dp"
        android:text="@string/txt_rating_question"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/ib_attitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:button="@drawable/cbx_rating_selector"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        style="@style/TxtCheckingRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/txt_attitude"
        app:layout_constraintStart_toEndOf="@+id/ib_attitude"
        app:layout_constraintTop_toTopOf="@+id/ib_attitude" />

    <CheckBox
        android:id="@+id/ib_toilet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:button="@drawable/cbx_rating_selector"
        app:layout_constraintStart_toStartOf="@+id/ib_attitude"
        app:layout_constraintTop_toBottomOf="@+id/ib_attitude" />

    <TextView
        style="@style/TxtCheckingRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/txt_toilet"
        app:layout_constraintStart_toEndOf="@+id/ib_toilet"
        app:layout_constraintTop_toTopOf="@+id/ib_toilet" />

    <CheckBox
        android:id="@+id/ib_quality"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:button="@drawable/cbx_rating_selector"
        app:layout_constraintStart_toStartOf="@+id/ib_toilet"
        app:layout_constraintTop_toBottomOf="@+id/ib_toilet" />

    <TextView
        style="@style/TxtCheckingRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/txt_quality"
        app:layout_constraintStart_toEndOf="@+id/ib_quality"
        app:layout_constraintTop_toTopOf="@+id/ib_quality" />

    <TextView
        android:id="@+id/textView5"
        style="@style/TxtComment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/txt_comment"
        app:layout_constraintStart_toStartOf="@+id/ib_quality"
        app:layout_constraintTop_toBottomOf="@+id/ib_quality" />

    <EditText
        android:id="@+id/editText"
        android:padding="5dp"
        android:layout_width="@dimen/edit_width_comment"
        android:layout_height="@dimen/edit_height_comment"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/edit_login_normal"
        android:gravity="top"
        android:minLines="5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.094" />

    <Button
        android:id="@+id/btn_finish"
        android:layout_width="@dimen/edit_width_comment"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:text="@string/btn_finish"
        style="@style/BtnFinish"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

</androidx.constraintlayout.widget.ConstraintLayout>